Added Sign-up and Sign-in views, controllers Added Category management views, controllers Renamed products.html to productList.html Updated menu elements Removed Back-button text Updated Icons

--- a/frontend/ionic/www/index.html
+++ b/frontend/ionic/www/index.html
@@ -28,11 +28,18 @@
     <script src="js/controllers/controllers.module.js"></script>
     <script src="js/controllers/mainController.js"></script>
     <script src="js/controllers/dashboardController.js"></script>
+    <script src="js/controllers/signinController.js"></script>
+    <script src="js/controllers/signupController.js"></script>
+    <script src="js/controllers/categoryListController.js"></script>
+    <script src="js/controllers/categoryController.js"></script>
     <script src="js/controllers/productListController.js"></script>
     <script src="js/controllers/productController.js"></script>
 
     <!-- app's services js -->
     <script src="js/services/services.module.js"></script>
+    <script src="js/services/userService.js"></script>
+    <script src="js/services/categoryService.js"></script>
+    
 </head>
 
 <body ng-app="RiverAquarium">
