Added ProductService for Product fake data Updated Category and Product views and routers

--- a/frontend/ionic/www/index.html
+++ b/frontend/ionic/www/index.html
@@ -39,6 +39,7 @@
     <script src="js/services/services.module.js"></script>
     <script src="js/services/userService.js"></script>
     <script src="js/services/categoryService.js"></script>
+    <script src="js/services/productService.js"></script>
     
 </head>
 
