Implemented role-based for angular-ui-router by adding AuthenticationService and IdentityService used when user tries to sign-in the app.

--- a/frontend/ionic/www/index.html
+++ b/frontend/ionic/www/index.html
@@ -15,6 +15,8 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
+    
+    <script src="lib/ionic/js/angular/angular-resource.min.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
@@ -40,6 +42,10 @@
     <script src="js/services/userService.js"></script>
     <script src="js/services/categoryService.js"></script>
     <script src="js/services/productService.js"></script>
+    <!-- app's security services js -->
+    <script src="js/services/security/services.security.module.js"></script>
+    <script src="js/services/security/identityService.js"></script>
+    <script src="js/services/security/authenticationService.js"></script>
     
 </head>
 
